<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ErasmUTT</string>

    <!-- Activity Titles -->

    <string name="title_activity_home">ErasmUTT</string>
    <string name="title_activity_new_account">New Account</string>
    <string name="title_activity_map">Nearby</string>
    <string name="title_activity_activity_handler">Search for : </string>
    <string name="title_activity_user_desc">My Account</string>
	<string name="title_popular_activities">Popular activities</string>
    <!-- Menu Titles -->

    <string name="action_settings">Settings</string>
    <string name="action_location">Nearby</string>
    <string name="action_help">Help</string>
    <string name="action_logout">Sign out</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <!-- Navigation Drawer Menu -->

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="text_menu_array">
        <item>ErasmUTT Home</item>
        <item>My Account</item>
        <item>My Groups</item>
        <item>My Review</item>
    </string-array>
    <!-- Map -->
    <string name="fetching_route">Fetching route, Please wait &#8230;</string>
    <string name="searchRoute">Search route ?</string>
    <string name="searchRouteDescription">Would you like to search a route from your current location to :</string>

    <!-- Network -->

    <string name="error_network">Network error, make sure you are connected and try again.</string>
    <string name="network_disabled">Network disabled, please make sure to enable it.</string>

    <!-- Account -->

    <string name="title_create_new_account">Create a new account</string>
    <string name="desc_account">Your account</string>
    <string name="hello">Hello %1$s!</string>
    <string name="GoodBye">See you soon %1$s!</string>
    <string name="firstname">"Your firstname : "</string>
    <string name="lastname">Your lastname :</string>
    <string name="textLabel_mail">Your E-mail address : </string>
    <string name="textLabel_password">Your password : </string>
    <string name="repeatPassword">Repeat your password</string>
    <string name="textButton_signIn">Sign in</string>
    <string name="text_createAccount">Sign up for ErasmUTT</string>
    <string name="password_repeat_error">Error password, please make sure that the two password are the same</string>
    <string name="invalid_password">Couple login / password invalid, please try again</string>
    <string name="createAccountNOK">Error during the account creation</string>
    <string name="setAccountNOK">Error during the account modification</string>
    <string name="searchEmpty">No result for this search</string>
    <string name="createAccountOK">Your account has been created</string>
    <string name="setAccountOK">Your account has been modified</string>
    <string name="tailleMdp">8 characters at least</string>
    <string name="textMajMdp">1 uppercase character at least</string>
    <string name="textTitleNeedMdp">Password need to :</string>
    <string name="password_error">Password too easy</string>

    
    <!-- Activity Details -->

    <string name="labelAddressActivity">Address : </string>
    <string name="labelDescriptionActivity">Description : </string>
    <string name="labelWebsite">Website : </string>
    <string name="labelRating">Average mark : </string>
    <string name="textWriteReview">Write a Review </string>
    <string name="reviews">Reviews </string>
    <string name="allReviews">All Reviews</string>
    <string name="title_reviews_users">Your reviews</string>
    <string name="any_reviews_users">Any reviews</string>
    <string name="moreReviews">More reviews</string>

    <plurals name="labelNumberReview">
        <item quantity="zero">%1$s reviews</item>
        <item quantity="one">%1$s review</item>
        <item quantity="other">%1$s reviews</item>
    </plurals>


	<!-- Activity Details -->
	
	<string name="hintResume">Resume</string>
	<string name="hintComment">Add a comment </string>
	<string name="labelYourRating">Add a mark :  </string>
	
	<!-- New Review Details -->
	
	<string name="hintResume">Resume</string>
	<string name="hintComment">Add a comment </string>
	<string name="labelYourRating">Add a mark :  </string>
	<string name="reviewPublished">Your review has been published.</string>

    <!-- Other -->

    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="set_label">Set</string>
    <string name="submit_label">Submit</string>
    <string name="cancel_label">Cancel</string>
    <string name="query_hint">Search</string>
    <string name="title_activity_user_reviews">UserReviews</string>
    <string name="sharing_choice">How do you want to share?</string>
    <string name="closeDialog">Close</string>

</resources>
