<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/field_vertical_margin" >

    <EditText
        android:id="@+id/editTextResume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/hintResume"
        android:layout_marginBottom="@dimen/field_vertical_margin" >
        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editTextComment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" 
        android:inputType="textMultiLine"
        android:minLines="3" 
		android:maxLines="6"
        android:hint="@string/hintComment"
        android:layout_marginBottom="@dimen/field_vertical_margin"/>
	<LinearLayout 
		android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
    	android:layout_marginBottom="@dimen/field_vertical_margin">
        
	    <TextView
	        android:id="@+id/textViewRatingBar"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/labelYourRating"
	        android:layout_marginRight="@dimen/field_vertical_margin"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <RatingBar
	        android:id="@+id/ratingBarReview"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        style="@style/customRatingBar"
	        android:numStars="5"
	        android:stepSize="0.5"  />    
	    
	</LinearLayout>

	<Button
	    android:id="@+id/buttonSendNewReview"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:text="@string/submit_label"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/activity_vertical_margin"
		android:layout_marginBottom="@dimen/activity_vertical_margin"
		android:background="@color/background_dark_blue" />

</LinearLayout>
