<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
	android:layout_margin="@dimen/field_vertical_margin" >

<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/field_vertical_margin"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/titleActivityDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_dark_blue"
        android:gravity="center"
        android:padding="@dimen/field_vertical_padding"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:visibility="invisible" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/field_vertical_margin"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageViewAcivityDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/field_vertical_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/labelAddressActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelAddressActivity"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:visibility="invisible"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            
            <TextView
                android:id="@+id/valueAddressActivity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_marginRight="@dimen/field_vertical_margin" />
            
            <ImageButton
		        android:id="@+id/imageButtonLocation"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/ic_action_place_blue"
		        android:background="@android:color/transparent"
		        android:visibility="invisible"
		         />
            
                </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/labelDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/field_vertical_margin"
        android:text="@string/labelDescriptionActivity"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/valueDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/field_vertical_margin"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/field_vertical_margin"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/labelWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/field_vertical_margin"
            android:text="@string/labelWebsite"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/linkWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/field_vertical_margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/background_light_blue" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/field_vertical_margin"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/labelRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/labelRating"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:visibility="invisible" />

        <RatingBar
            android:id="@+id/averageRatingBarActivity"
            style="@style/customRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/field_vertical_margin"
            android:layout_marginRight="@dimen/field_vertical_margin"
            android:isIndicator="true"
            android:numStars="5"
            android:stepSize="0.5" 
            android:visibility="invisible"/>

        <TextView
            android:id="@+id/labelNumberReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
    
         <Button
         android:id="@+id/writeReview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/textWriteReview"
         android:layout_gravity="right"
         android:textAlignment="center"
         android:paddingRight="@dimen/field_vertical_padding"
         android:paddingLeft="@dimen/field_vertical_padding"
         android:textColor="@android:color/white"
		android:background="@color/background_dark_blue"
		android:visibility="invisible"
		android:layout_marginBottom="@dimen/field_vertical_margin"
          />

</LinearLayout>

</ScrollView>